; ModuleID = '/home/carl/AnghaBench/esp-idf/components/perfmon/test/extr_test_perfmon_ansi.c_test_callback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/perfmon/test/extr_test_perfmon_ansi.c_test_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"test\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"test_callback select = %i,  mask = %i, value = %i\00", align 1
@callback_called = common dso_local global i32 0, align 4
@callback_call_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i32)* @test_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_callback(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @ESP_LOGI(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0), i32 %9, i32 %10, i32 %11)
  store i32 1, i32* @callback_called, align 4
  %13 = load i32, i32* @callback_call_count, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @callback_call_count, align 4
  ret void
}

declare dso_local i32 @ESP_LOGI(i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
